[package]
name = "map-extractor"
version = "2.0.0"
edition = "2021"
authors = ["Lapis256"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bedrock-rs = { git = "https://github.com/Lapis256/bedrock-rs", rev = "106bcbbca56fb60f47693d6897d1c90e8a77a1d3" }
clap = { version = "4", features = ["derive", "string"] }

[[bin]]
name = "map_extractor"
path = "src/main.rs"
